# balls_and_sticks

./: .gitignore  .mypy.ini  README.md  check.sh  install_flake8.sh  install_poetry.sh  pyproject.toml
docs/: README.md
scad/atoms/: atom.scad  atom_utils.scad  element_properties.scad  elements.scad
scad/molecules/: adenine.scad  diatomic_molecule.scad  dihydrogen.scad  sodium_chloride.scad  water.scad
scad/utils/: connection_defaults.scad  connection_pin.scad  connection_pin_profile.scad  connection_profile.scad  connection_sleeve.scad  connection_sleeve_profile.scad  connector_pin.scad  constants.scad  math_utils.scad  module_utils.scad  n_gon_utils.scad  snap_defaults.scad  snap_joint.scad  spherical_cap.scad  text_utils.scad
src/atoms/: atom.py  atom_model.py  atom_position.py  bond.py  element.py  neighbor.py  test_atom.py  test_element.py
src/data/pubchem/: adenine.json  fluoxetine.json  methylphenidate.json  water.json
src/examples/: adenine.py  test_adenine.py  test_water.py  water.py
src/molecules/: azanide  molecule.py  molecule_model.py  molecule_model_utils.py  molecule_position_utils.py  molecule_positions.py  molecule_representation.py  test_azanide  test_molecule_positions.py  test_water.py  water.py
src/utils/: constants.py  echeck.py  point.py  polygon.py  print_utils.py  revolve_text.py  snap_joint.py  spherical_cap.py  test_point.py  test_polygon.py
stls/: connection_pin.stl  connection_sleeve.stl  snap_ring.stl
stls/molecules/: dihydrogen.stl
stls/molecules/adenine/: c2.stl  c4.stl  c5.stl  c6.stl  c8.stl  h2.stl  h6.stl  h8.stl  (+6 more)
